// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component ContributorRow Row should be clickable when showContributorAssignment set to true 1`] = `
<div>
  <li
    aria-label="Select this record (J. Smith) to assign it to you"
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-1pviqsb-MuiListItem-root"
    data-testid="test-list-row-0"
    id="test-list-row-0"
    tabindex="0"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container css-13yzope-MuiGridLegacy-root"
      id="contributor-row"
    >
      <div
        class="MuiListItemIcon-root css-m11kn3-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="PersonOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 6c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2m0 10c2.7 0 5.8 1.29 6 2H6c.23-.72 3.31-2 6-2m0-12C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4m0 10c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4"
          />
        </svg>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-md-3 css-cpq5ae-MuiGridLegacy-root"
        data-testid="test-list-row-0-name-as-published"
        id="test-list-row-0-name-as-published"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-sq7264-MuiTypography-root"
          >
            J. Smith
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1q4f2v3-MuiTypography-root"
          >
            First  listed contributor
          </span>
        </div>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-md-5 css-65iimg-MuiGridLegacy-root"
        data-testid="test-list-row-0-uq-details"
        id="test-list-row-0-uq-details"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-sq7264-MuiTypography-root"
          >
            Professor J Researcher
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1q4f2v3-MuiTypography-root"
          >
            The University of Queensland (uqresearcher - 410)
          </span>
        </div>
      </div>
      <div
        class="css-rxds9v"
        data-testid="test-list-row-0-actions"
        id="test-list-row-0-actions"
      >
        <span
          aria-label="Remove this record"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="Remove this record"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
            data-analyticsid="test-list-row-0-delete"
            data-testid="test-list-row-0-delete"
            id="test-list-row-delete-0"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="DeleteIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
              />
            </svg>
          </button>
        </span>
      </div>
    </div>
  </li>
</div>
`;

exports[`Component ContributorRow Row should not be clickable when showContributorAssignment set to false 1`] = `
<div>
  <li
    aria-label="Select this record (J. Smith) to assign it to you"
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-1pviqsb-MuiListItem-root"
    data-testid="test-list-row-0"
    id="test-list-row-0"
    tabindex="0"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container css-13yzope-MuiGridLegacy-root"
      id="contributor-row"
    >
      <div
        class="MuiListItemIcon-root css-m11kn3-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="PersonOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 6c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2m0 10c2.7 0 5.8 1.29 6 2H6c.23-.72 3.31-2 6-2m0-12C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4m0 10c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4"
          />
        </svg>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-md-3 css-cpq5ae-MuiGridLegacy-root"
        data-testid="test-list-row-0-name-as-published"
        id="test-list-row-0-name-as-published"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-sq7264-MuiTypography-root"
          >
            J. Smith
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1q4f2v3-MuiTypography-root"
          >
            First  listed contributor
          </span>
        </div>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-md-5 css-65iimg-MuiGridLegacy-root"
        data-testid="test-list-row-0-uq-details"
        id="test-list-row-0-uq-details"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-sq7264-MuiTypography-root"
          >
            Professor J Researcher
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1q4f2v3-MuiTypography-root"
          >
            The University of Queensland (uqresearcher - 410)
          </span>
        </div>
      </div>
      <div
        class="css-rxds9v"
        data-testid="test-list-row-0-actions"
        id="test-list-row-0-actions"
      >
        <span
          aria-label="Remove this record"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="Remove this record"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
            data-analyticsid="test-list-row-0-delete"
            data-testid="test-list-row-0-delete"
            id="test-list-row-delete-0"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="DeleteIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
              />
            </svg>
          </button>
        </span>
      </div>
    </div>
  </li>
</div>
`;

exports[`Component ContributorRow a row with index and contributor set, renders only name and delete button 1`] = `
<div>
  <li
    aria-label="Select this record (A. Smith) to assign it to you"
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-1pviqsb-MuiListItem-root"
    data-testid="test-list-row-0"
    id="test-list-row-0"
    tabindex="0"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container css-13yzope-MuiGridLegacy-root"
      id="contributor-row"
    >
      <div
        class="MuiListItemIcon-root css-m11kn3-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="PersonOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 6c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2m0 10c2.7 0 5.8 1.29 6 2H6c.23-.72 3.31-2 6-2m0-12C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4m0 10c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4"
          />
        </svg>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-md-3 css-cpq5ae-MuiGridLegacy-root"
        data-testid="test-list-row-0-name-as-published"
        id="test-list-row-0-name-as-published"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-sq7264-MuiTypography-root"
          >
            A. Smith
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1q4f2v3-MuiTypography-root"
          >
            First  listed contributor
          </span>
        </div>
      </div>
      <div
        class="css-rxds9v"
        data-testid="test-list-row-0-actions"
        id="test-list-row-0-actions"
      >
        <span
          aria-label="Remove this record"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="Remove this record"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
            data-analyticsid="test-list-row-0-delete"
            data-testid="test-list-row-0-delete"
            id="test-list-row-delete-0"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="DeleteIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
              />
            </svg>
          </button>
        </span>
      </div>
    </div>
  </li>
</div>
`;

exports[`Component ContributorRow a row with index and contributor set, renders only name and delete button for mobile view 1`] = `
<div>
  <li
    aria-label="Select this record (A. Smith) to assign it to you"
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-1pviqsb-MuiListItem-root"
    data-testid="test-list-row-0"
    id="test-list-row-0"
    tabindex="0"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container css-13yzope-MuiGridLegacy-root"
      id="contributor-row"
    >
      <div
        class="MuiListItemIcon-root css-m11kn3-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="PersonOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 6c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2m0 10c2.7 0 5.8 1.29 6 2H6c.23-.72 3.31-2 6-2m0-12C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4m0 10c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4"
          />
        </svg>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-md-3 css-cpq5ae-MuiGridLegacy-root"
        data-testid="test-list-row-0-name-as-published"
        id="test-list-row-0-name-as-published"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-sq7264-MuiTypography-root"
          >
            A. Smith
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1q4f2v3-MuiTypography-root"
          >
            First  listed contributor
          </span>
        </div>
      </div>
      <div
        class="css-rxds9v"
        data-testid="test-list-row-0-actions"
        id="test-list-row-0-actions"
      >
        <span
          aria-label="Remove this record"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="Remove this record"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
            data-analyticsid="test-list-row-0-delete"
            data-testid="test-list-row-0-delete"
            id="test-list-row-delete-0"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="DeleteIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
              />
            </svg>
          </button>
        </span>
      </div>
    </div>
  </li>
</div>
`;

exports[`Component ContributorRow a row with index and contributor set, renders reorder buttons, contributor assignment & delete button 1`] = `
<div>
  <li
    aria-label="Select this record (J. Smith) to assign it to you"
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-1pviqsb-MuiListItem-root"
    data-testid="test-list-row-0"
    id="test-list-row-0"
    tabindex="0"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container css-13yzope-MuiGridLegacy-root"
      id="contributor-row"
    >
      <div
        class="MuiListItemIcon-root css-m11kn3-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="PersonOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 6c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2m0 10c2.7 0 5.8 1.29 6 2H6c.23-.72 3.31-2 6-2m0-12C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4m0 10c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4"
          />
        </svg>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-md-3 css-cpq5ae-MuiGridLegacy-root"
        data-testid="test-list-row-0-name-as-published"
        id="test-list-row-0-name-as-published"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-sq7264-MuiTypography-root"
          >
            J. Smith
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1q4f2v3-MuiTypography-root"
          >
            First  listed contributor
          </span>
        </div>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-md-5 css-65iimg-MuiGridLegacy-root"
        data-testid="test-list-row-0-uq-details"
        id="test-list-row-0-uq-details"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-sq7264-MuiTypography-root"
          >
            Professor J Researcher
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1q4f2v3-MuiTypography-root"
          >
            The University of Queensland (uqresearcher - 410)
          </span>
        </div>
      </div>
      <div
        class="css-rxds9v"
        data-testid="test-list-row-0-actions"
        id="test-list-row-0-actions"
      >
        <span
          aria-label="Move record up the order"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="Move record up the order"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
            data-analyticsid="test-list-row-0-move-up"
            data-testid="test-list-row-0-move-up"
            id="test-list-row-move-up-0"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="KeyboardArrowUpIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7.41 15.41 12 10.83l4.59 4.58L18 14l-6-6-6 6z"
              />
            </svg>
          </button>
        </span>
        <span
          aria-label="Move record down the order"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="Move record down the order"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
            data-analyticsid="test-list-row-0-move-down"
            data-testid="test-list-row-0-move-down"
            id="test-list-row-move-down-0"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="KeyboardArrowDownIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6z"
              />
            </svg>
          </button>
        </span>
        <span
          aria-label="Remove this record"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="Remove this record"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
            data-analyticsid="test-list-row-0-delete"
            data-testid="test-list-row-0-delete"
            id="test-list-row-delete-0"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="DeleteIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
              />
            </svg>
          </button>
        </span>
      </div>
    </div>
  </li>
</div>
`;

exports[`Component ContributorRow a row with index and contributor with author details set and set as selected 1`] = `
<div>
  <li
    aria-label="Select this record (J. Smith) to assign it to you"
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-1wati88-MuiListItem-root"
    data-testid="test-list-row-0"
    id="test-list-row-0"
    tabindex="0"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container css-13yzope-MuiGridLegacy-root"
      id="contributor-row"
    >
      <div
        class="MuiListItemIcon-root css-1xlb6x9-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="PersonIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4m0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4"
          />
        </svg>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-md-3 css-cpq5ae-MuiGridLegacy-root"
        data-testid="test-list-row-0-name-as-published"
        id="test-list-row-0-name-as-published"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-tki2hk-MuiTypography-root"
          >
            J. Smith
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-qvw9r7-MuiTypography-root"
          >
            First  listed contributor
          </span>
        </div>
      </div>
      <div
        class="css-rxds9v"
        data-testid="test-list-row-0-actions"
        id="test-list-row-0-actions"
      >
        <span
          aria-label="Remove this record"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="Remove this record"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
            data-analyticsid="test-list-row-0-delete"
            data-testid="test-list-row-0-delete"
            id="test-list-row-delete-0"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1krx6eu-MuiSvgIcon-root"
              data-testid="DeleteIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
              />
            </svg>
          </button>
        </span>
      </div>
    </div>
  </li>
</div>
`;

exports[`Component ContributorRow a row with index and contributor with author details set and set as selected for mobile view 1`] = `
<div>
  <li
    aria-label="Select this record (J. Smith) to assign it to you"
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-1wati88-MuiListItem-root"
    data-testid="test-list-row-0"
    id="test-list-row-0"
    tabindex="0"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container css-13yzope-MuiGridLegacy-root"
      id="contributor-row"
    >
      <div
        class="MuiListItemIcon-root css-1xlb6x9-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="PersonIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4m0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4"
          />
        </svg>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-md-3 css-cpq5ae-MuiGridLegacy-root"
        data-testid="test-list-row-0-name-as-published"
        id="test-list-row-0-name-as-published"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-tki2hk-MuiTypography-root"
          >
            J. Smith
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-qvw9r7-MuiTypography-root"
          >
            First  listed contributor
          </span>
        </div>
      </div>
      <div
        class="css-rxds9v"
        data-testid="test-list-row-0-actions"
        id="test-list-row-0-actions"
      >
        <span
          aria-label="Remove this record"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="Remove this record"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
            data-analyticsid="test-list-row-0-delete"
            data-testid="test-list-row-0-delete"
            id="test-list-row-delete-0"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1krx6eu-MuiSvgIcon-root"
              data-testid="DeleteIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
              />
            </svg>
          </button>
        </span>
      </div>
    </div>
  </li>
</div>
`;

exports[`Component ContributorRow a row with index and contributor with author details set, contributor author details & delete button 1`] = `
<div>
  <li
    aria-label="Select this record (J. Smith) to assign it to you"
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-1pviqsb-MuiListItem-root"
    data-testid="test-list-row-0"
    id="test-list-row-0"
    tabindex="0"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container css-13yzope-MuiGridLegacy-root"
      id="contributor-row"
    >
      <div
        class="MuiListItemIcon-root css-m11kn3-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="PersonOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 6c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2m0 10c2.7 0 5.8 1.29 6 2H6c.23-.72 3.31-2 6-2m0-12C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4m0 10c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4"
          />
        </svg>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-md-3 css-cpq5ae-MuiGridLegacy-root"
        data-testid="test-list-row-0-name-as-published"
        id="test-list-row-0-name-as-published"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-sq7264-MuiTypography-root"
          >
            J. Smith
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1q4f2v3-MuiTypography-root"
          >
            First  listed contributor
          </span>
        </div>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-md-5 css-65iimg-MuiGridLegacy-root"
        data-testid="test-list-row-0-uq-details"
        id="test-list-row-0-uq-details"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-sq7264-MuiTypography-root"
          >
            Professor J Researcher
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1q4f2v3-MuiTypography-root"
          >
            The University of Queensland (uqresearcher - 410)
          </span>
        </div>
      </div>
      <div
        class="css-rxds9v"
        data-testid="test-list-row-0-actions"
        id="test-list-row-0-actions"
      >
        <span
          aria-label="Remove this record"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="Remove this record"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
            data-analyticsid="test-list-row-0-delete"
            data-testid="test-list-row-0-delete"
            id="test-list-row-delete-0"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="DeleteIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
              />
            </svg>
          </button>
        </span>
      </div>
    </div>
  </li>
</div>
`;

exports[`Component ContributorRow a row with index and creator with creator role set and set as selected 1`] = `
<div>
  <li
    aria-label="Select this record (J. Smith) to assign it to you"
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-1wati88-MuiListItem-root"
    data-testid="test-list-row-0"
    id="test-list-row-0"
    tabindex="0"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container css-13yzope-MuiGridLegacy-root"
      id="contributor-row"
    >
      <div
        class="MuiListItemIcon-root css-1xlb6x9-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="PersonIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4m0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4"
          />
        </svg>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-md-3 css-cpq5ae-MuiGridLegacy-root"
        data-testid="test-list-row-0-name-as-published"
        id="test-list-row-0-name-as-published"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-tki2hk-MuiTypography-root"
          >
            J. Smith
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-qvw9r7-MuiTypography-root"
          >
            First  listed contributor
          </span>
        </div>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-md-5 css-2v8532-MuiGridLegacy-root"
        data-testid="test-list-row-0-role"
        id="test-list-row-0-role"
      >
        <div
          class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-tki2hk-MuiTypography-root"
          >
            Investigator
          </p>
        </div>
      </div>
      <div
        class="css-rxds9v"
        data-testid="test-list-row-0-actions"
        id="test-list-row-0-actions"
      >
        <span
          aria-label="Remove this record"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="Remove this record"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
            data-analyticsid="test-list-row-0-delete"
            data-testid="test-list-row-0-delete"
            id="test-list-row-delete-0"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1krx6eu-MuiSvgIcon-root"
              data-testid="DeleteIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
              />
            </svg>
          </button>
        </span>
      </div>
    </div>
  </li>
</div>
`;

exports[`Component ContributorRow a row with index and creator with creator role set and set as selected for mobile view 1`] = `
<div>
  <li
    aria-label="Select this record (J. Smith) to assign it to you"
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-1wati88-MuiListItem-root"
    data-testid="test-list-row-0"
    id="test-list-row-0"
    tabindex="0"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container css-13yzope-MuiGridLegacy-root"
      id="contributor-row"
    >
      <div
        class="MuiListItemIcon-root css-1xlb6x9-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="PersonIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4m0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4"
          />
        </svg>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-md-3 css-cpq5ae-MuiGridLegacy-root"
        data-testid="test-list-row-0-name-as-published"
        id="test-list-row-0-name-as-published"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-tki2hk-MuiTypography-root"
          >
            J. Smith
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-qvw9r7-MuiTypography-root"
          >
            First  listed contributor
          </span>
        </div>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-md-5 css-2v8532-MuiGridLegacy-root"
        data-testid="test-list-row-0-role"
        id="test-list-row-0-role"
      >
        <div
          class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-tki2hk-MuiTypography-root"
          >
            Investigator
          </p>
        </div>
      </div>
      <div
        class="css-rxds9v"
        data-testid="test-list-row-0-actions"
        id="test-list-row-0-actions"
      >
        <span
          aria-label="Remove this record"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="Remove this record"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
            data-analyticsid="test-list-row-0-delete"
            data-testid="test-list-row-0-delete"
            id="test-list-row-delete-0"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1krx6eu-MuiSvgIcon-root"
              data-testid="DeleteIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
              />
            </svg>
          </button>
        </span>
      </div>
    </div>
  </li>
</div>
`;

exports[`Component ContributorRow should handle edits 1`] = `
<div>
  <li
    aria-label="Select this record (A. Smith) to assign it to you"
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-1pviqsb-MuiListItem-root"
    data-testid="test-list-row-2"
    id="test-list-row-2"
    tabindex="0"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container css-13yzope-MuiGridLegacy-root"
      id="contributor-row"
    >
      <div
        class="MuiListItemIcon-root css-m11kn3-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="PersonOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 6c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2m0 10c2.7 0 5.8 1.29 6 2H6c.23-.72 3.31-2 6-2m0-12C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4m0 10c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4"
          />
        </svg>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-md-3 css-cpq5ae-MuiGridLegacy-root"
        data-testid="test-list-row-2-name-as-published"
        id="test-list-row-2-name-as-published"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-sq7264-MuiTypography-root"
          >
            A. Smith
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1q4f2v3-MuiTypography-root"
          >
            Third  listed contributor
          </span>
        </div>
      </div>
      <div
        class="css-rxds9v"
        data-testid="test-list-row-2-actions"
        id="test-list-row-2-actions"
      >
        <span
          aria-label="Edit this record"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="Edit this record"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
            data-analyticsid="test-list-row-2-edit"
            data-testid="test-list-row-2-edit"
            id="test-list-row-edit-2"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="EditIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75z"
              />
            </svg>
          </button>
        </span>
        <span
          aria-label="Remove this record"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="Remove this record"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
            data-analyticsid="test-list-row-2-delete"
            data-testid="test-list-row-2-delete"
            id="test-list-row-delete-2"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="DeleteIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
              />
            </svg>
          </button>
        </span>
      </div>
    </div>
  </li>
</div>
`;

exports[`Component ContributorRow should render a row with a disabled contributor 1`] = `
<div>
  <li
    aria-label="Select this record (undefined) to assign it to you"
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-1wa01ha-MuiListItem-root"
    data-testid="test-list-row-0"
    id="test-list-row-0"
    tabindex="-1"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container css-13yzope-MuiGridLegacy-root"
      id="contributor-row"
    >
      <div
        class="MuiListItemIcon-root css-m11kn3-MuiListItemIcon-root"
      >
        <span
          aria-label="You are not able to edit this row"
          class=""
          data-mui-internal-clone-element="true"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="LockIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2m-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2m3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1s3.1 1.39 3.1 3.1z"
            />
          </svg>
        </span>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-md-3 css-cpq5ae-MuiGridLegacy-root"
        data-testid="test-list-row-0-name-as-published"
        id="test-list-row-0-name-as-published"
      >
        <div
          class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1q4f2v3-MuiTypography-root"
          >
            First  listed contributor
          </span>
        </div>
      </div>
      <div
        class="css-rxds9v"
        data-testid="test-list-row-0-actions"
        id="test-list-row-0-actions"
      >
        <span
          aria-label="Remove this record"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="Remove this record"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
            data-analyticsid="test-list-row-0-delete"
            data-testid="test-list-row-0-delete"
            id="test-list-row-delete-0"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="DeleteIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
              />
            </svg>
          </button>
        </span>
      </div>
    </div>
  </li>
</div>
`;

exports[`Component ContributorRow should render contributor row linked class for admin users 1`] = `
<div>
  <li
    aria-label="Select this record (Test) to assign it to you"
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-1fm2ijt-MuiListItem-root"
    data-testid="test-list-row-0"
    id="test-list-row-0"
    tabindex="0"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container css-13yzope-MuiGridLegacy-root"
      id="contributor-row"
    >
      <div
        class="MuiListItemIcon-root css-m11kn3-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="HowToRegIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="m9 17 3-2.94c-.39-.04-.68-.06-1-.06-2.67 0-8 1.34-8 4v2h9zm2-5c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4m4.47 8.5L12 17l1.4-1.41 2.07 2.08 5.13-5.17 1.4 1.41z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-md-3 css-cpq5ae-MuiGridLegacy-root"
        data-testid="test-list-row-0-name-as-published"
        id="test-list-row-0-name-as-published"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-sq7264-MuiTypography-root"
          >
            Test
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1q4f2v3-MuiTypography-root"
          >
            First  listed contributor
          </span>
        </div>
      </div>
      <div
        class="css-rxds9v"
        data-testid="test-list-row-0-actions"
        id="test-list-row-0-actions"
      >
        <span
          aria-label="Edit this record"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="Edit this record"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
            data-analyticsid="test-list-row-0-edit"
            data-testid="test-list-row-0-edit"
            id="test-list-row-edit-0"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="EditIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75z"
              />
            </svg>
          </button>
        </span>
        <span
          aria-label="Remove this record"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="Remove this record"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
            data-analyticsid="test-list-row-0-delete"
            data-testid="test-list-row-0-delete"
            id="test-list-row-delete-0"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="DeleteIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
              />
            </svg>
          </button>
        </span>
      </div>
    </div>
  </li>
</div>
`;

exports[`Component ContributorRow should render row as required 1`] = `
<div>
  <li
    aria-label="Select this record (Test) to assign it to you"
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-yy8s7b-MuiListItem-root"
    data-testid="test-list-row-0"
    id="test-list-row-0"
    tabindex="0"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container css-13yzope-MuiGridLegacy-root"
      id="contributor-row"
    >
      <div
        class="MuiListItemIcon-root css-m11kn3-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="PersonOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 6c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2m0 10c2.7 0 5.8 1.29 6 2H6c.23-.72 3.31-2 6-2m0-12C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4m0 10c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4"
          />
        </svg>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-md-3 css-cpq5ae-MuiGridLegacy-root"
        data-testid="test-list-row-0-name-as-published"
        id="test-list-row-0-name-as-published"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-sq7264-MuiTypography-root"
          >
            Test
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1q4f2v3-MuiTypography-root"
          >
            First  listed contributor
          </span>
        </div>
      </div>
      <div
        class="css-rxds9v"
        data-testid="test-list-row-0-actions"
        id="test-list-row-0-actions"
      >
        <span
          aria-label="Remove this record"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="Remove this record"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
            data-analyticsid="test-list-row-0-delete"
            data-testid="test-list-row-0-delete"
            id="test-list-row-delete-0"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="DeleteIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
              />
            </svg>
          </button>
        </span>
      </div>
    </div>
  </li>
</div>
`;

exports[`Component ContributorRow should render with default props 1`] = `
<div>
  <li
    aria-label="Select this record (A. Smith) to assign it to you"
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-1pviqsb-MuiListItem-root"
    data-testid="test-list-row-0"
    id="test-list-row-0"
    tabindex="0"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container css-13yzope-MuiGridLegacy-root"
      id="contributor-row"
    >
      <div
        class="MuiListItemIcon-root css-m11kn3-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="PersonOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 6c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2m0 10c2.7 0 5.8 1.29 6 2H6c.23-.72 3.31-2 6-2m0-12C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4m0 10c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4"
          />
        </svg>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-md-3 css-cpq5ae-MuiGridLegacy-root"
        data-testid="test-list-row-0-name-as-published"
        id="test-list-row-0-name-as-published"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-sq7264-MuiTypography-root"
          >
            A. Smith
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1q4f2v3-MuiTypography-root"
          >
            First  listed contributor
          </span>
        </div>
      </div>
      <div
        class="css-rxds9v"
        data-testid="test-list-row-0-actions"
        id="test-list-row-0-actions"
      >
        <span
          aria-label="Remove this record"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="Remove this record"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
            data-analyticsid="test-list-row-0-delete"
            data-testid="test-list-row-0-delete"
            id="test-list-row-delete-0"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="DeleteIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
              />
            </svg>
          </button>
        </span>
      </div>
    </div>
  </li>
</div>
`;

exports[`Component ContributorRow should render with missing aria label if selectHint prop is falsy 1`] = `
<div>
  <li
    aria-label=""
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-1pviqsb-MuiListItem-root"
    data-testid="test-list-row-0"
    id="test-list-row-0"
    tabindex="0"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container css-13yzope-MuiGridLegacy-root"
      id="contributor-row"
    >
      <div
        class="MuiListItemIcon-root css-m11kn3-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="PersonOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 6c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2m0 10c2.7 0 5.8 1.29 6 2H6c.23-.72 3.31-2 6-2m0-12C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4m0 10c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4"
          />
        </svg>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-md-3 css-cpq5ae-MuiGridLegacy-root"
        data-testid="test-list-row-0-name-as-published"
        id="test-list-row-0-name-as-published"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-sq7264-MuiTypography-root"
          >
            A. Smith
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1q4f2v3-MuiTypography-root"
          >
            First undefined
          </span>
        </div>
      </div>
      <div
        class="css-rxds9v"
        data-testid="test-list-row-0-actions"
        id="test-list-row-0-actions"
      >
        <span
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
            data-analyticsid="test-list-row-0-delete"
            data-testid="test-list-row-0-delete"
            id="test-list-row-delete-0"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="DeleteIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
              />
            </svg>
          </button>
        </span>
      </div>
    </div>
  </li>
</div>
`;
